2008-07-08  Hans de Graaff  <hans@degraaff.org>

	* checkbot (handle_doc): Tighten up the check for a robots tag so
	that nofollow text later in the document won't be matched, thus
	skipping the whole document, bug 2005950.

2007-05-05  Brandon Bell  <Brandon_Bell@bcit.ca>

	* checkbot: mms scheme can be ignored safely.

2007-04-30  Hans de Graaff  <hans@degraaff.org>

	* checkbot (printAllServers): Clarify that 'Unique links' actually
	is 'Documents scanned'.

2007-02-26  Hans de Graaff  <hans@degraaff.org>

	* checkbot (handle_doc): Handle the case where decoded_content is
	not available as per bug 1665075.

2007-02-26  Gerald Preifer  <gerald@pfeifer.com>

	* checkbot (check_point): Simplify and add a comment.

2007-02-26  Hans de Graaff  <hans@degraaff.org>

	* Makefile.PL: Require LWP 5.803 or better. decoded_content got
	added in 5.802 and 5.803 added some important bugfixes.

2007-02-03  Hans de Graaff  <hans@degraaff.org>

	* Checkbot 1.79 is released

	* RELEASE-PROCESS: Add the release process documentation.

2007-01-27  Gerald Pfeifer  <gerald@pfeifer.com>

	* checkbot (init_suppression): Check and provide error if
	suppression file is in fact a directory.

2006-12-28  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Add summary to tables to make files XHTML 1.1 compliant.

2006-11-16  Hans de Graaff  <hans@degraaff.org>

	* checkbot (handle_doc): Parse the decoded content so that all
	character set issues are dealt with before parsing. This solves
	bug 1264729.

2006-11-14  Hans de Graaff  <hans@degraaff.org>

	* checkbot (performRequest): Simplify the code dealing with
	problems of HEAD requests by retrying all 500 reponses instead of
	special-cases particular failures that we happen to know
	about. This type of problem is all to common, and if there really
	is a problem GET will find it anyway.
	(add_error): Allow regular expressions in the suppression
	file. Based on patch from Eric Noack

2006-11-14  Eric Noack  <en@lightwerk.com>
