@@ -28,7 +28,7 @@ BEGIN {
 
 # Version information
 my
-$VERSION = '1.79';
+$VERSION = '1.80';
 
 
 =head1 NAME
