@@ -21,10 +21,19 @@
 		href="http://www.perl.com/CPAN/modules/by-authors/id/JJDG/">CPAN</a>,
 		the Comprehensive Perl
 	  Archive Network. Currently the latest version is <a
-		href="checkbot-1.79.tar.gz">checkbot-1.79.tar.gz</a>.</p>
+		href="checkbot-1.80.tar.gz">checkbot-1.80.tar.gz</a>.</p>
 
 	<p>Checkbot is now hosted on <a
 		href="http://sourceforge.net/projects/checkbot/">sourceforge.net</a>.</p>
+
+	<h3>Changes in version 1.80 (15-Oct-2008)</h3>
+	<ul>
+	  <li>Fix handling of nofollow robots tag.</li>
+	  <li>Require newer version of LWP for better handling of character
+		encodings.</li>
+	  <li>Ignore mms scheme.</li>
+	  <li>Minor clarification in output.</li>
+	</ul>
 
 	<h3>Changes in version 1.79 (3-Feb-2007)</h3>
 	<ul>
@@ -190,7 +199,7 @@
 <address>
 <!-- Created: Sun Aug 31 19:50:42 CEST 1997 -->
 <!-- hhmts start -->
-Last modified: Mon Feb 26 16:51:48 CET 2007
+Last modified: Wed Oct 15 14:22:04 CEST 2008
 <!-- hhmts end -->
 </address>
   </body>
